crates/wac-parser/tests/resolution/fail/non-instance-spread.wac
package test:comp;

import f: func();

let x = new foo:bar { ...f };
